--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-pay/button-react": "^3.0.5",
     "@next/font": "13.0.7",
+    "@paypal/react-paypal-js": "^7.8.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
